Fixes text size on feature descriptions on mobile.

--- a/src/components/Features/styles.module.css
+++ b/src/components/Features/styles.module.css
@@ -112,4 +112,8 @@
   .featureMedia {
     width: 100%;
   }
+
+  .featureDescription {
+    font-size: 1rem;
+  }
 }
